z-index in stauuding fix

--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
@@ -1,6 +1,5 @@
 .studding-wrapper {
   padding: 52px 0;
-  z-index: -1;
   position: relative;
   background-image: url(../images/sales-page/top-triangle.svg), url(../images/sales-page/bottom-triangle.svg);
   background-position: top -70px left -80px, top 810px right -90px;
